--- a/Danish_Osama_Anas_STAProject/Danish_Osama_Anas_STAProject.csproj
+++ b/Danish_Osama_Anas_STAProject/Danish_Osama_Anas_STAProject.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="log4net.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
