Login/Purchase Assertion
This commit has both Positive and Negative cycle

--- a/Danish_Osama_Anas_STAProject/Danish_Osama_Anas_STAProject.csproj
+++ b/Danish_Osama_Anas_STAProject/Danish_Osama_Anas_STAProject.csproj
@@ -61,6 +61,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AUTConstants.cs" />
     <Compile Include="BaseClass.cs" />
     <Compile Include="PurchaseCheckout.cs" />
     <Compile Include="TestExecution.cs" />
